--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
-    //id 'kotlin-parcelize'
 }
 
 android {
@@ -74,6 +73,7 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
 
     // DataBinding
+    kapt "com.android.databinding:compiler:3.1.4"
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
     kapt "androidx.databinding:databinding-common:4.1.1"
 
